--- a/Flexboxstyles.CSS
+++ b/Flexboxstyles.CSS
@@ -1,4 +1,5 @@
 body {
+    background:radial-gradient(circle,rgba(2,0,36,1)0%, rgb(9,9,121,1) 35%,rgba(0,212,255,1) 100%);
     margin: 0;
     display: flex;
     flex-direction: column;
